<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/movies"
        android:orderInCategory="100"
        android:title="@string/movies"
        app:showAsAction="never" />

    <item
        android:id="@+id/favourite"
        android:orderInCategory="100"
        android:title="@string/favourite"
        app:showAsAction="never" />

    <item
        android:id="@+id/setting"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />

    <item
        android:icon="@mipmap/ic_grid_on_white"
        android:id="@+id/showGrid"
        android:orderInCategory="100"
        android:title="@string/isgrid"
        app:showAsAction="ifRoom" />

    <item
        android:visible="false"
        android:icon="@mipmap/ic_search_white"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:id="@+id/search"
        android:orderInCategory="100"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
</menu>