<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/dimen_18sp"
        android:gravity="center"
        android:text="@string/delete_favourite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginHorizontal="@dimen/dimen_100dp"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/are_you"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="1"
            android:id="@+id/txtDelete"
            android:gravity="center"
            android:paddingVertical="@dimen/dimen_10dp"
            android:textSize="@dimen/dimen_18sp"
            android:text="@string/yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <View
            android:background="@color/black"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_weight="1"
            android:id="@+id/txtCancel"
            android:gravity="center"
            android:paddingVertical="@dimen/dimen_10dp"
            android:textSize="@dimen/dimen_18sp"
            android:text="@string/no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>