<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/dimen_8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="@dimen/dimen_16sp"
        android:textColor="@color/black"
        android:text="@string/from_release_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_marginTop="@dimen/dimen_16dp"
        android:inputType="number"
        android:backgroundTint="@color/color_radio_button"
        android:padding="@dimen/dimen_8dp"
        android:hint="@string/year"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/editTextYear"
        android:layout_width="@dimen/dimen_350dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/btnCancel"
        android:padding="@dimen/dimen_8dp"
        android:textColor="#1B9788"
        android:text="@string/cancel"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:layout_constraintTop_toBottomOf="@id/editTextYear"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginEnd="@dimen/dimen_8dp"
        android:id="@+id/btnOk"
        android:padding="@dimen/dimen_8dp"
        android:textColor="#1B9788"
        android:text="@string/ok"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:layout_constraintTop_toBottomOf="@id/editTextYear"
        app:layout_constraintEnd_toStartOf="@id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>