<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/dimen_5dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.SettingFragment">

    <TextView
        android:textColor="#80ACACAC"
        android:text="@string/filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <View
        android:background="#B6B6B6"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>

    <LinearLayout
        android:layout_marginTop="@dimen/dimen_10dp"
        android:id="@+id/btnCategory"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/dimen_18sp"
            android:text="@string/category"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/txtCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/dimen_16dp"
        android:id="@+id/btnRateFrom"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/dimen_18sp"
            android:text="@string/rate_from"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/txtRateFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/dimen_16dp"
        android:id="@+id/btnReleaseYear"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/dimen_18sp"
            android:text="@string/from_release_year"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/txtReleaseYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
        android:layout_marginTop="@dimen/dimen_16dp"
        android:textColor="#80ACACAC"
        android:text="@string/sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <View
        android:background="#B6B6B6"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>

    <LinearLayout
        android:layout_marginTop="@dimen/dimen_10dp"
        android:id="@+id/btnSortBy"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/dimen_18sp"
            android:text="@string/sort_by"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/txtSortBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>