<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingHorizontal="@dimen/dimen_16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">

    <ImageView
        android:id="@+id/imgAva"
        android:background="@drawable/bg_img_ava"
        android:scaleType="fitXY"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="@dimen/dimen_100dp"
        android:layout_height="@dimen/dimen_100dp"/>

    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/btnCancel"
        android:layout_width="@dimen/dimen_100dp"
        android:layout_height="@dimen/dimen_50dp"
        android:layout_marginTop="@dimen/dimen_26dp"
        android:background="@drawable/bg_button_edit"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_18sp" />
    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/btnDone"
        android:layout_width="@dimen/dimen_100dp"
        android:layout_height="@dimen/dimen_50dp"
        android:layout_marginTop="@dimen/dimen_26dp"
        android:background="@drawable/bg_button_edit"
        android:gravity="center"
        android:text="@string/done"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_18sp" />

    <TextView
        android:id="@+id/txtName"
        android:text="@string/name"
        android:layout_marginTop="@dimen/dimen_20dp"
        app:layout_constraintTop_toBottomOf="@id/imgAva"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:textColor="@color/black"
        android:id="@+id/editTextName"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:textSize="@dimen/dimen_18sp"
        app:layout_constraintTop_toBottomOf="@id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txtMail"
        android:text="@string/sample_example_com"
        android:layout_marginTop="@dimen/dimen_20dp"
        app:layout_constraintTop_toBottomOf="@id/editTextName"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:textColor="@color/black"
        android:id="@+id/editTextMail"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:textSize="@dimen/dimen_18sp"
        app:layout_constraintTop_toBottomOf="@id/txtMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:drawablePadding="@dimen/dimen_16dp"
        android:id="@+id/btnBirthday"
        tools:text="2015/11/27"
        android:layout_marginTop="@dimen/dimen_20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        app:drawableStartCompat="@mipmap/ic_cake"/>

    <ImageView
        android:id="@+id/imgPerson"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@mipmap/ic_person"
        app:layout_constraintTop_toBottomOf="@id/btnBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:layout_marginStart="@dimen/dimen_8dp"
        app:layout_constraintBottom_toBottomOf="@id/imgPerson"
        app:layout_constraintTop_toTopOf="@id/imgPerson"
        app:layout_constraintStart_toEndOf="@id/imgPerson"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioMale"
            android:buttonTint="@color/color_radio_button"
            android:checked="true"
            android:text="@string/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_marginStart="@dimen/dimen_26dp"
            android:buttonTint="@color/color_radio_button"
            android:text="@string/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>