<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/txtTitle"
        android:padding="@dimen/dimen_10dp"
        android:textSize="@dimen/dimen_16sp"
        android:textColor="@color/black"
        android:text="@string/are_you_sure_to_delete"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <View
        android:id="@+id/view"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <TextView
        android:textColor="@color/black"
        android:id="@+id/btnNo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintEnd_toStartOf="@id/view2"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@id/view2"
        android:text="@string/no"
        android:layout_width="0dp"
        android:layout_height="0dp"/>
    <View
        android:id="@+id/view2"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view"
        android:layout_width="1dp"
        android:layout_height="@dimen/dimen_30dp"/>
    <TextView
        android:id="@+id/btnYes"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/view2"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintBottom_toBottomOf="@id/view2"
        android:gravity="center"
        android:text="@string/yes"
        android:layout_width="0dp"
        android:layout_height="0dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>