<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/dimen_8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="@dimen/dimen_16sp"
        android:textColor="@color/black"
        android:text="@string/rate_from"
        android:layout_width="@dimen/dimen_350dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txtRateFrom"
        android:layout_marginEnd="@dimen/dimen_16dp"
        app:layout_constraintBottom_toTopOf="@id/seekBar"
        app:layout_constraintEnd_toEndOf="@id/seekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <SeekBar
        android:progressTint="@color/color_radio_button"
        android:thumbTint="@color/color_radio_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/btnCancel"
        android:padding="@dimen/dimen_8dp"
        android:textColor="#1B9788"
        android:text="@string/cancel"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:layout_constraintTop_toBottomOf="@id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginEnd="@dimen/dimen_8dp"
        android:id="@+id/btnOk"
        android:padding="@dimen/dimen_8dp"
        android:textColor="#1B9788"
        android:text="@string/ok"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:layout_constraintTop_toBottomOf="@id/seekBar"
        app:layout_constraintEnd_toStartOf="@id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>